feat:add do modo nivel medio